# pinocchio-gepetto-viewer

./: CMakeLists.txt  LICENSE  README.md
doc/: main.hpp
include/pinocchio/gepetto/: viewer.hh  viewer.hpp  viewer.hxx
plugins/: CMakeLists.txt
plugins/pinocchio-plugin/: CMakeLists.txt  frame-tree.cc  frame-tree.hh  frame-tree.ui  fwd.hh  header-view.hh  plugin.cc  plugin.hh  python.cc  python.hh
src/: viewer.cc
tests/: pinocchio-plugin.py  ur5.cc
